fix issues on mobile screens

--- a/src/styles/terminal.css
+++ b/src/styles/terminal.css
@@ -51,9 +51,13 @@ body {
   .terminal-window {
     height: 80vh;
   }
+
+  .terminal p {
+    font-size: 10px;
+  }
   
   .terminal-header {
-    font-size: 10px;
+    font-size: 8px;
   }
 
   .send-button {
